--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -72,6 +72,10 @@
     <add key="DebitorSaldoOverNul" value="False"/>
     <add key="KreditorSaldoOverNul" value="True"/>
     <add key="DageForBogføringsperiode" value="30"/>
+    <add key="SmtpServer" value="smtp.gmail.com"/>
+    <add key="SmtpUserName" value="mrgottham@gmail.com"/>
+    <add key="SmtpPassword" value="Ubqv7rR4z6IFVwNoQCYUmg=="/>
+    <add key="FromMailAddress" value="noreply@formindskmadspild.com"/>
   </appSettings>
   
   <system.web>
