--- a/OSDevGrp.OSIntranet.Services/Web.Debug.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Debug.config
@@ -1,3 +1,47 @@
 ﻿<?xml version="1.0"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <system.serviceModel>
+    <bindings>
+      <ws2007FederationHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding">
+          <security>
+            <message>
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/WSX509" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)">
+              </issuer>
+              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)">
+              </issuerMetadata>
+            </message>
+          </security>
+        </binding>
+        <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding">
+          <security>
+            <message>
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/WSUserName" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)">
+              </issuer>
+              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)">
+              </issuerMetadata>
+            </message>
+          </security>
+        </binding>
+      </ws2007FederationHttpBinding>
+    </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
+          <serviceCredentials>
+            <issuedTokenAuthentication>
+              <allowedAudienceUris xdt:Transform="Replace">
+                <add allowedAudienceUri="http://localhost/osintranetdev/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastehouseholdservice.svc"/>
+              </allowedAudienceUris>
+            </issuedTokenAuthentication>
+          </serviceCredentials>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
