--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <Compile Include="Integrationstests\Repositories\AdresseRepositoryTests.cs" />
     <Compile Include="Integrationstests\Repositories\FinansstyringRepositoryTests.cs" />
+    <Compile Include="Integrationstests\Repositories\FoodWaste\ConfigurationRepositoryTests.cs" />
     <Compile Include="Integrationstests\Repositories\FoodWaste\HouseholdDataRepositoryTests.cs" />
     <Compile Include="Integrationstests\Repositories\FoodWaste\SystemDataRepositoryTests.cs" />
     <Compile Include="Integrationstests\Repositories\FællesRepositoryTests.cs" />
@@ -351,6 +352,7 @@
     <Compile Include="Unittests\Repositories\DataProxies\Kalender\BrugerProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DomainObjectBuilderTest.cs" />
     <Compile Include="Unittests\Repositories\FinansstyringRepositoryTests.cs" />
+    <Compile Include="Unittests\Repositories\FoodWaste\ConfigurationRepositoryTests.cs" />
     <Compile Include="Unittests\Repositories\FoodWaste\DataRepositoryBaseTests.cs" />
     <Compile Include="Unittests\Repositories\FoodWaste\HouseholdDataRepositoryTests.cs" />
     <Compile Include="Unittests\Repositories\FoodWaste\SystemDataRepositoryTests.cs" />
