--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -110,6 +110,7 @@
     <Compile Include="DataProxies\Kalender\BrugerProxy.cs" />
     <Compile Include="DomainObjectBuilder.cs" />
     <Compile Include="FinansstyringRepository.cs" />
+    <Compile Include="FoodWaste\CommunicationRepository.cs" />
     <Compile Include="FoodWaste\ConfigurationRepository.cs" />
     <Compile Include="FoodWaste\DataRepositoryBase.cs" />
     <Compile Include="FoodWaste\DataRepositoryHelper.cs" />
