--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -73,8 +73,11 @@
     <add key="KreditorSaldoOverNul" value="True"/>
     <add key="DageForBogføringsperiode" value="30"/>
     <add key="SmtpServer" value="smtp.gmail.com"/>
+    <add key="SmtpPort" value="587"/>
+    <add key="UseSmtpAuthentication" value="True"/>
     <add key="SmtpUserName" value="mrgottham@gmail.com"/>
     <add key="SmtpPassword" value="Ubqv7rR4z6IFVwNoQCYUmg=="/>
+    <add key="UseSmtpSecureConnection" value="True"/>
     <add key="FromMailAddress" value="noreply@formindskmadspild.com"/>
   </appSettings>
   
