--- a/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -74,6 +74,7 @@
     <Compile Include="FoodWaste\ForeignKey.cs" />
     <Compile Include="FoodWaste\HouseholdMember.cs" />
     <Compile Include="FoodWaste\IdentifiableBase.cs" />
+    <Compile Include="FoodWaste\StaticText.cs" />
     <Compile Include="FoodWaste\TranslatableBase.cs" />
     <Compile Include="FoodWaste\Translation.cs" />
     <Compile Include="FoodWaste\TranslationInfo.cs" />
