--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -102,6 +102,7 @@
     <Compile Include="DataProxies\FoodWaste\FoodItemProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\ForeignKeyProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\HouseholdMemberProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\StaticTextProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationInfoProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationProxy.cs" />
     <Compile Include="DataProxies\Fælles\SystemProxy.cs" />
