--- a/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Finansstyring\IBudgetkontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IKontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IRegnskabslisteHelper.cs" />
+    <Compile Include="FoodWaste\Enums\Membership.cs" />
     <Compile Include="FoodWaste\Enums\StaticTextType.cs" />
     <Compile Include="FoodWaste\IDomainObjectValidations.cs" />
     <Compile Include="FoodWaste\IDataProvider.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="FoodWaste\IFoodItemCollection.cs" />
     <Compile Include="FoodWaste\IForeignKey.cs" />
     <Compile Include="FoodWaste\IForeignKeyable.cs" />
+    <Compile Include="FoodWaste\IHousehold.cs" />
     <Compile Include="FoodWaste\IHouseholdMember.cs" />
     <Compile Include="FoodWaste\IIdentifiable.cs" />
     <Compile Include="FoodWaste\IStaticText.cs" />
