--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -200,7 +200,9 @@
     <Compile Include="Unittests\Contracts\Queries\PersonGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\PersonlisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\PostnumreGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\PrivacyPolicyGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\RegnskabslisteGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\StaticTextCollectionGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\SystemerGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\TelefonlisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\TranslationInfoCollectionGetQueryTests.cs" />
@@ -246,6 +248,8 @@
     <Compile Include="Unittests\Contracts\Views\PersonViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\PostnummerViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\RegnskabslisteViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\StaticTextSystemViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\StaticTextViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\SystemViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\TelefonlisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\TranslationInfoSystemViewTests.cs" />
@@ -309,6 +313,7 @@
     <Compile Include="Unittests\QueryHandlers\Core\FoodItemCollectionGetQueryHandlerBaseTest.cs" />
     <Compile Include="Unittests\QueryHandlers\Core\KalenderQueryHandlerBaseTests.cs" />
     <Compile Include="Unittests\QueryHandlers\Core\RegnskabQueryHandlerBaseTests.cs" />
+    <Compile Include="Unittests\QueryHandlers\Core\StaticTextGetQueryHandlerBaseTests.cs" />
     <Compile Include="Unittests\QueryHandlers\DataProviderCollectionGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\DebitorGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\DebitorlisteGetQueryHandlerTests.cs" />
@@ -332,7 +337,9 @@
     <Compile Include="Unittests\QueryHandlers\PersonGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\PersonlisteGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\PostnumreGetQueryHandlerTests.cs" />
+    <Compile Include="Unittests\QueryHandlers\PrivacyPolicyGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\RegnskabslisteGetQueryHandlerTests.cs" />
+    <Compile Include="Unittests\QueryHandlers\StaticTextCollectionGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\SystemerGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\TelefonlisteGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\TranslationInfoCollectionGetQueryHandlerTests.cs" />
