--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Core\KalenderCommandHandlerBase.cs" />
     <Compile Include="Core\LogicExecutor.cs" />
     <Compile Include="Core\RegnskabCommandHandlerBase.cs" />
+    <Compile Include="Dispatchers\DispatcherBase.cs" />
+    <Compile Include="Dispatchers\IDispatcher.cs" />
     <Compile Include="Dispatchers\IStaticTextFieldMerge.cs" />
     <Compile Include="Dispatchers\StaticTextFieldMerge.cs" />
     <Compile Include="FoodItemImportFromDataProviderCommandHandler.cs" />
