--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Unittests\CommandHandlers\Core\RegnskabCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Dispatchers\DispatcherBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Dispatchers\StaticTextFieldMergeTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\Dispatchers\WelcomeLetterDispatcherTests.cs" />
     <Compile Include="Unittests\CommandHandlers\FoodItemImportFromDataProviderCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\ForeignKeyAddCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\ForeignKeyDeleteCommandHandlerTests.cs" />
