--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BogføringslinjeOpretCommandHandler.cs" />
     <Compile Include="Core\AdressekartotekCommandHandlerBase.cs" />
     <Compile Include="Core\FinansstyringCommandHandlerBase.cs" />
+    <Compile Include="Core\FoodWasteHouseholdDataCommandHandlerBase.cs" />
     <Compile Include="Core\FoodWasteSystemDataCommandHandlerBase.cs" />
     <Compile Include="Core\FællesElementCommandHandlerBase.cs" />
     <Compile Include="Core\ILogicExecutor.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="ForeignKeyDeleteCommandHandler.cs" />
     <Compile Include="ForeignKeyModifyCommandHandler.cs" />
     <Compile Include="FoodGroupImportFromDataProviderCommandHandler.cs" />
+    <Compile Include="HouseholdMemberAddCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
     <Compile Include="TranslationDeleteCommandHandler.cs" />
