--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -81,6 +81,7 @@
     <Compile Include="FoodGroupTreeGetQueryHandlerForSystemView.cs" />
     <Compile Include="FoodItemCollectionGetQueryHandler.cs" />
     <Compile Include="FoodItemCollectionGetQueryHandlerForSystemView.cs" />
+    <Compile Include="HouseholdMemberIsCreatedQueryHandler.cs" />
     <Compile Include="KalenderbrugerAftaleGetQueryHandler.cs" />
     <Compile Include="KalenderbrugerAftalerGetQueryHandler.cs" />
     <Compile Include="KalenderbrugereGetQueryHandler.cs" />
