--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Unittests\Contracts\Queries\FirmalisteGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\FoodGroupTreeGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\FoodItemCollectionGetQueryTests.cs" />
+    <Compile Include="Unittests\Contracts\Queries\HouseholdMemberIsCreatedQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KalenderbrugerAftaleGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KalenderbrugerAftalerGetQueryTests.cs" />
     <Compile Include="Unittests\Contracts\Queries\KalenderbrugereGetQueryTests.cs" />
@@ -336,6 +337,7 @@
     <Compile Include="Unittests\QueryHandlers\FoodGroupTreeGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\FoodItemCollectionGetQueryHandlerForSystemViewTests.cs" />
     <Compile Include="Unittests\QueryHandlers\FoodItemCollectionGetQueryHandlerTest.cs" />
+    <Compile Include="Unittests\QueryHandlers\HouseholdMemberIsCreatedQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\KalenderbrugerAftaleGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\KalenderbrugerAftalerGetQueryHandlerTests.cs" />
     <Compile Include="Unittests\QueryHandlers\KalenderbrugereGetQueryHandlerTests.cs" />
