--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -89,6 +89,8 @@
     <Compile Include="Queries\FoodGroupTreeGetQuery.cs" />
     <Compile Include="Queries\FoodItemCollectionGetQuery.cs" />
     <Compile Include="Queries\HouseholdMemberDataGetQueryBase.cs" />
+    <Compile Include="Queries\HouseholdMemberHasAcceptedPrivacyPolicyQuery.cs" />
+    <Compile Include="Queries\HouseholdMemberIsActivatedQuery.cs" />
     <Compile Include="Queries\HouseholdMemberIsCreatedQuery.cs" />
     <Compile Include="Queries\HouseholdMemberTranslatableDataGetQueryBase.cs" />
     <Compile Include="Queries\KalenderbrugerAftaleGetQuery.cs" />
