--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ForeignKeyDeleteCommandHandler.cs" />
     <Compile Include="ForeignKeyModifyCommandHandler.cs" />
     <Compile Include="FoodGroupImportFromDataProviderCommandHandler.cs" />
+    <Compile Include="HouseholdMemberActivateCommandHandler.cs" />
     <Compile Include="HouseholdMemberAddCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
