--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Unittests\CommandHandlers\ForeignKeyDeleteCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\ForeignKeyModifyCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\FoodGroupImportFromDataProviderCommandHandlerTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\HouseholdMemberAcceptPrivacyPolicyCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberActivateCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberAddCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationAddCommandHandlerTests.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="Unittests\Contracts\Commands\ForeignKeyDeleteCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\ForeignKeyModifyCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\FoodGroupImportFromDataProviderCommandTests.cs" />
+    <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAcceptPrivacyPolicyCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberActivateCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAddCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationAddCommandTests.cs" />
