--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Queries\FirmalisteGetQuery.cs" />
     <Compile Include="Queries\FoodGroupTreeGetQuery.cs" />
     <Compile Include="Queries\FoodItemCollectionGetQuery.cs" />
+    <Compile Include="Queries\HouseholdMemberDataGetQuery.cs" />
     <Compile Include="Queries\HouseholdMemberDataGetQueryBase.cs" />
     <Compile Include="Queries\HouseholdMemberHasAcceptedPrivacyPolicyQuery.cs" />
     <Compile Include="Queries\HouseholdMemberIsActivatedQuery.cs" />
@@ -121,7 +122,7 @@
     <Compile Include="Services\ICommonService.cs" />
     <Compile Include="Services\IFinansstyringService.cs" />
     <Compile Include="Services\IFoodWasteSystemDataService.cs" />
-    <Compile Include="Services\IFoodWasteHouseholdService.cs" />
+    <Compile Include="Services\IFoodWasteHouseholdDataService.cs" />
     <Compile Include="Services\IIntranetService.cs" />
     <Compile Include="Services\IKalenderService.cs" />
     <Compile Include="SoapNamespaces.cs" />
@@ -154,6 +155,9 @@
     <Compile Include="Views\FoodItemView.cs" />
     <Compile Include="Views\ForeignKeySystemView.cs" />
     <Compile Include="Views\ForeignKeyView.cs" />
+    <Compile Include="Views\HouseholdIdentificationView.cs" />
+    <Compile Include="Views\HouseholdMemberIdentificationView.cs" />
+    <Compile Include="Views\HouseholdMemberView.cs" />
     <Compile Include="Views\KalenderbrugerAftaleView.cs" />
     <Compile Include="Views\KalenderbrugerView.cs" />
     <Compile Include="Views\KontoBaseView.cs" />
